<resources>
    <string name="app_name">Karar Ve Döngü Yapıları</string>
    <string name="uyg1">Uygulama-1(Sayı 100 den büyükmü)</string>
    <string name="uyg2">Uygulama-2 (Hangisi büyük)</string>
    <string name="uyg3">Uygulama-3 (Giriş sistemi)</string>
    <string name="uyg4">Uygulama-4 (Konum izni)</string>
    <string name="uyg5">Uygulama-5 (İf Else Yapısı)</string>
    <string name="uyg6">Uygulama-6 (switch-case)</string>
    <string name="uyg7">Uygulama-7(Döngü)</string>
    <string name="uyg8">Uygulama-8 (0-100)</string>
    <string name="uyg9">Uygulama-9 (Listeleme)</string>
    <string name="uyg10">Uygulama-10 (Faktoreyel heseplama)</string>



</resources>